version 0.2:


version 0.1.1:
 + full support for MSC2010 classification
 + fix: make article list sortable
 + fix: processing of one-digit MSC tags

version 0.1:
 + support for exploring a hierarchy of files
 + selective display based on MSC classification