@@ -38,6 +38,13 @@
               </object>
             </child>
             <child>
+              <object class="GtkMenuItem" id="mi_about">
+                <property name="visible">True</property>
+                <property name="label" translatable="yes">_About...</property>
+                <property name="use_underline">True</property>
+              </object>
+            </child>
+            <child>
               <object class="GtkMenuItem" id="mi_quit">
                 <property name="visible">True</property>
                 <property name="label" translatable="yes">_Quit</property>
