@@ -1,5 +1,6 @@
 version 0.2:
-
+ + add Refresh button
+ + add About dialog
 
 version 0.1.1:
  + full support for MSC2010 classification
